--- a/src/app/Components/asientos/asientos.component.html
+++ b/src/app/Components/asientos/asientos.component.html
@@ -23,7 +23,7 @@
           </div>
         <div class = "input-group">
             <button class = "btn-mover" routerLink="/proyeccion">Regresar</button>
-            <button class = "btn-mover" routerLink="/finalizar">Finalizar</button>
+            <button class = "btn-mover" routerLink="/cinema">Finalizar</button>
         </div>
     </section>
 </body>
