--- a/src/app/Components/asientos/asientos.component.html
+++ b/src/app/Components/asientos/asientos.component.html
@@ -1,5 +1,6 @@
 <app-header></app-header>
 <app-breadcrumb></app-breadcrumb>
+<app-clientinfo></app-clientinfo>
 <body>
     <section id = "seleccionar" >
         <h4>Seleccione un Asiento</h4>
@@ -23,9 +24,7 @@
           </div>
         <div class = "input-group">
             <button class = "btn-mover" routerLink="/proyeccion">Regresar</button>
-            <button class = "btn-mover" routerLink="/cinema">Finalizar</button>
+            <button class = "btn-mover" routerLink="/salida">Finalizar</button>
         </div>
     </section>
 </body>
-
-
