--- a/src/app/Components/cinema/cinema.component.html
+++ b/src/app/Components/cinema/cinema.component.html
@@ -1,5 +1,6 @@
 <app-header></app-header>
 <app-breadcrumb></app-breadcrumb>
+<app-clientinfo></app-clientinfo>
 <section id = "seleccionar">
     <h4>Seleccione uno de nuestros cines</h4>
     <br>
