--- a/src/app/Components/register/register.component.html
+++ b/src/app/Components/register/register.component.html
@@ -21,7 +21,7 @@
         <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Contraseña">
     </div>
     <br>
-    <button id = "btn-register" routerLink="/Login">Registrarse</button>
+    <button id = "btn-register" routerLink="/login">Registrarse</button>
     <br>
 </section>
 
