--- a/src/app/Components/proyeccion/proyeccion.component.html
+++ b/src/app/Components/proyeccion/proyeccion.component.html
@@ -1,5 +1,6 @@
 <app-header></app-header>
 <app-breadcrumb></app-breadcrumb>
+<app-clientinfo></app-clientinfo>
 <section id = "seleccionar">
     <h4>Seleccione una Proyección</h4>
     <br>
