--- a/src/app/Components/peliculas/peliculas.component.html
+++ b/src/app/Components/peliculas/peliculas.component.html
@@ -25,9 +25,8 @@
             <div class="mb-4">
                 <textarea class="form-control" aria-label="With textarea" placeholder="Protagonistas"></textarea>
             </div>
-
-            <div class="input-group mb-3">
-                <input type="file" class="form-control" id="inputGroupFile02">
+            <div class="mb-4">
+                <input type="email" class="form-control" id="exampleInputPassword1" placeholder="Dirección Portada"  name = "1" >
             </div>
               <br>
             <button id="btn-agregar" > Agregar </button>
@@ -45,7 +44,7 @@
                         <input type="email" class="form-control" id="exampleInputPassword1" placeholder="Director"  name = "1" >
                         <input type="email" class="form-control" id="exampleInputPassword1" placeholder="Clasificación"  name = "1" >
                         <textarea  style="height:20px;" class="form-control" aria-label="With textarea" placeholder="Protagonistas"></textarea>            
-                        <input type="file" class="form-control" id="inputGroupFile02">
+                        <input type="email" class="form-control" id="exampleInputPassword1" placeholder="Dirección Portada"  name = "1" >
                         <button id="btn-editar" > Editar </button>
                       </div>
                 </div>
