--- a/ClientApp/src/app/Components/proyeccion/proyeccion.component.html
+++ b/ClientApp/src/app/Components/proyeccion/proyeccion.component.html
@@ -12,7 +12,7 @@
         </button>
         <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1" >
             <li *ngFor = "let proyeccion of proyecciones">
-                <a class="dropdown-item" (click)="seleccionar(proyeccion)">{{proyeccion}}</a>
+                <a class="dropdown-item" (click)="seleccionar(proyeccion.horario)">{{proyeccion.horario}}</a>
             </li>
         </ul>
     </div>
