--- a/ClientApp/src/app/Components/exitpage/exitpage.component.html
+++ b/ClientApp/src/app/Components/exitpage/exitpage.component.html
@@ -12,7 +12,9 @@
         <p>Seleccione Continuar para regresar a la ventana de seleccion de Cinema</p>
         <p>Seleccione Cerrar Sesión para salir de la aplicación</p>
         <div class = "input-group">
-            <button class = "btn-mover" routerLink="/cinema">Continuar</button>
+            <a href="https://localhost:5001/api/clientes/pdf">
+                <input type="button" value="Obtener factura" />
+             </a>             
             <button class = "btn-mover" routerLink="/login">Cerrar Sesión</button>
         </div>
     </section>
