--- a/ClientApp/src/app/Components/peliculas/peliculas-form/peliculas-form.component.html
+++ b/ClientApp/src/app/Components/peliculas/peliculas-form/peliculas-form.component.html
@@ -1,4 +1,4 @@
-<h1>{{modoEdicion ? 'Editar' : 'Agregar'}} Pelicula</h1>
+<h1>Pelicula</h1>
 <form class="form-horizontal" novalidate
       (ngSubmit)="save()" [formGroup]="formGroup">
   <fieldset>
